--- a/mesa_makefile_headers/makefile_header_custom
+++ b/mesa_makefile_headers/makefile_header_custom
@@ -30,10 +30,10 @@ SPECIAL_LINK_FLAGS = -Wl,-rpath,${CONDA_PREFIX}/lib
 # step 3) specify which BLAS and LAPACK libraries to use for mesa/mtx
 
 # these are the standard defaults
-WHICH_LAPACK = USE_SRCS
-LOAD_LAPACK = -lmesalapack
-WHICH_BLAS = USE_SRCS
-LOAD_BLAS = -lmesablas
+WHICH_LAPACK =
+LOAD_LAPACK = -llapack
+WHICH_BLAS =
+LOAD_BLAS = -lblas
 MKL_INCLUDE =
 
 # step 4) do you want to use PGPLOT with mesa/star?
