--- a/mesa_sdk_env.yaml
+++ b/mesa_sdk_env.yaml
@@ -7,14 +7,11 @@ dependencies:
   # - clang_osx-64
   # - gfortran_osx-64==7.3.0
   - valgrind
-  - blas
-  - lapack
-  - hdf5
-  - pgplot
+  # - blas
+  # - lapack
+  # - hdf5
+  # - pgplot
   - ffmpeg
   - ndiff
   - makedepf90
 
-# The GNU Project Debugger (gdb)
-# The SE library from the NuGrid project
-# The ndiff fuzzy comparison tool
