--- a/mesa_env_spack_osx.yaml
+++ b/mesa_env_spack_osx.yaml
@@ -7,10 +7,10 @@ dependencies:
   # - clang_osx-64
   # - gfortran_osx-64==7.3.0
   - valgrind
-  - openblas
+  # - openblas
   # - lapack
-  - hdf5
-  - pgplot
+  # - hdf5
+  # - pgplot
   - ffmpeg
   - ndiff
   - makedepf90
