--- a/env_spack_osx.yaml
+++ b/env_spack_osx.yaml
@@ -1,16 +1,15 @@
-name: mesa_sdk
+name: mesa_spack
 channels:
   - local
-  - conda-forge/label/gcc7
   - conda-forge
   - defaults
 dependencies:
-  - gcc_linux-64
+  # - clang_osx-64
+  # - gfortran_osx-64==7.3.0
   - valgrind
-  - blas
-  - lapack
-  - hdf5
-  - pgplot
+  # - openblas
+  # - hdf5
+  # - pgplot
   - ffmpeg
   - ndiff
   - makedepf90
