--- a/env_conda_osx.yaml
+++ b/env_conda_osx.yaml
@@ -4,8 +4,7 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  # - clang_osx-64
-  # - gfortran_osx-64==7.3.0
+  - gfortran_osx-64==7.3.0
   - valgrind
   - openblas
   - hdf5
